--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: 'Arial', sans-serif;
     body {
-        background: linear-gradient(to bottom, rgb(255, 255, 255), #d3ac8b);
+        background: #f5dac3
         margin: 0;
         padding-top: 150px;
         padding-bottom: 150px;
